# oriens

./: .gitignore  LICENSE  README.md
docker/: Dockerfile  build.sh  install_extra.sh  run.sh
docker/environment/: bashrc_default
oriens_complementary_filter/: CMakeLists.txt  README.md  package.xml
oriens_complementary_filter/include/oriens_complementary_filter/: complementary_filter.hpp
oriens_complementary_filter/launch/: complementary_filter_launch.py
oriens_complementary_filter/params/: complementary_filter_params.yaml
oriens_complementary_filter/src/: complementary_filter.cpp  complementary_filter_node.cpp
oriens_core/: CMakeLists.txt  package.xml
oriens_core/include/oriens_core/: accelerometer.hpp  core.hpp  gyroscope.hpp  magnetometer.hpp  sensor.hpp
oriens_core/src/: accelerometer.cpp  core.cpp  core_node.cpp  gyroscope.cpp  magnetometer.cpp  sensor.cpp
oriens_kalman/: CMakeLists.txt  package.xml
oriens_kalman/include/oriens_kalman/: kalman.hpp
oriens_kalman/src/: kalman.cpp  kalman_node.cpp
oriens_madgwick/: CMakeLists.txt  README.md  package.xml
oriens_madgwick/include/oriens_madgwick/: madgwick.hpp
oriens_madgwick/launch/: madgwick_launch.py
oriens_madgwick/params/: madgwick_params.yaml
oriens_madgwick/src/: madgwick.cpp  madgwick_node.cpp
oriens_msg/: CMakeLists.txt  package.xml
oriens_msg/msg/: Marg.msg
oriens_msgs/: CMakeLists.txt  package.xml
oriens_support/: CMakeLists.txt  README.md  package.xml
oriens_support/include/oriens_support/: serial_reader.hpp
oriens_support/launch/: serial_reader_launch.py
oriens_support/params/: serial_reader_params.yaml
oriens_support/src/: serial_reader.cpp  serial_reader_node.cpp
