<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>oriens_complementary_filter</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fulvio.diluzio@gmail.com">ros</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>oriens_msgs</depend>
  <depend>oriens_core</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
